--- a/node-development/app/sass/framework/project-globals/_globals-project.sass
+++ b/node-development/app/sass/framework/project-globals/_globals-project.sass
@@ -33,14 +33,14 @@ $brand-secondary-invert:	$brand-primary
 $brand-darker-invert:			$white										
 $red-invert:							$white										
 $dark-red-invert:					$white							
-$orange-invert:						invert($orange)						
+$orange-invert:						$white						
 $yellow-invert:						invert($yellow)						
 $light-green-invert:			$white		 
-$mid-green-invert:				$mid-green				
+$mid-green-invert:				$white				
 $blue-invert:							$white					
 $light-blue-invert:				darken($light-blue, 50%)	
 $purple-invert:						$white						
-$indigo-invert:						invert($indigo)					
+$indigo-invert:						$white					
 $violet-invert:						$white					
 
 $colors: ('primary': ($brand-primary, $brand-primary-invert), 'secondary': ($brand-secondary, $brand-secondary-invert), 'brand-darker': ($brand-darker, $brand-darker-invert), 'red':  ($red, $red-invert), 'dark-red':  ($dark-red, $dark-red-invert), 'orange': ($orange, $orange-invert), 'yellow': ($yellow, $yellow-invert), 'light-green': ($light-green, $light-green-invert), 'mid-green': ($mid-green, $mid-green-invert), 'blue': ($blue, $blue-invert), 'light-blue': ($light-blue, $light-blue-invert), 'purple': ($purple, $purple-invert), 'indigo': ($indigo, $indigo-invert), 'violet': ($violet, $violet-invert))
