--- a/node-development/app/sass/framework/_utilities.sass
+++ b/node-development/app/sass/framework/_utilities.sass
@@ -173,7 +173,7 @@
 		max-height: 1.5rem
 		margin-right: $gutter/2
 .bc-intro-paragraph
-	font-size: 1.25rem
+	font-size: $text-01
 	font-weight: 300
 		
 	
