--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ html {
 
 body {
   font-size: 100%;
-  line-height: 1.45; }
+  line-height: 1.5; }
 
 h1, h2, h3, h4, h5 {
   color: #303030;
@@ -123,7 +123,7 @@ h5 {
 
 p {
   color: #303030;
-  line-height: 1.45;
+  line-height: 1.5;
   margin-top: 0;
   margin-bottom: 1.5rem; }
 
@@ -165,7 +165,7 @@ figcaption {
   .bc-icon-link--featured {
     font-size: 1.1487rem; }
     .bc-icon-link--featured .bc-svg-icon {
-      max-height: 1.66562rem; }
+      max-height: 1.72305rem; }
     .bc-icon-link--featured:hover, .bc-icon-link--featured:active, .bc-icon-link--featured:focus {
       background-color: transparent;
       text-decoration: underline; }
@@ -1103,7 +1103,7 @@ figcaption {
     margin-right: 0.75rem; }
 
 .bc-intro-paragraph {
-  font-size: 1.25rem;
+  font-size: 1.1487rem;
   font-weight: 300; }
 
 /* Navigation toggle icon */
@@ -1210,7 +1210,7 @@ figcaption {
     overflow: visible;
     font-weight: 500;
     font-size: 1.1487rem;
-    border-radius: 2.16561rem;
+    border-radius: 2.22305rem;
     border: 1px solid #017CC0;
     background-color: #fff;
     margin-top: 0;
@@ -1235,7 +1235,7 @@ figcaption {
     width: 98%;
     height: 0;
     overflow: hidden;
-    margin-top: -2.91483rem;
+    margin-top: -3.01534rem;
     margin-right: auto;
     margin-bottom: 1.5rem;
     margin-left: auto;
@@ -1245,12 +1245,12 @@ figcaption {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    padding-top: 2.91483rem;
+    padding-top: 3.01534rem;
     padding-right: calc(1.5rem - 1%);
     padding-bottom: 0.75rem;
     padding-left: calc(1.5rem - 1%);
     border: 1px solid #017CC0;
-    border-radius: 1.66562rem; }
+    border-radius: 1.72305rem; }
   .feature-page-navigation__item > a {
     display: block;
     padding-top: 0.75rem;
@@ -1338,7 +1338,7 @@ figcaption {
       width: 160%;
       height: auto;
       margin: auto;
-      border-radius: 1.66562rem;
+      border-radius: 1.72305rem;
       box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.16), -4px -4px 8px rgba(0, 0, 0, 0.16); }
     .feature-page-navigation.feature-page-navigation--floating .feature-page-navigation__heading {
       padding: 1rem 1.5rem;
@@ -1507,7 +1507,7 @@ figcaption {
       margin-left: auto;
       margin-right: auto; }
   .bc-content-component__heading {
-    font-size: 2rem;
+    font-size: 2.2974rem;
     margin-top: 0.9rem;
     margin-bottom: 1.5rem; }
 
@@ -1515,12 +1515,23 @@ figcaption {
   .bc-content-component__content, .bc-content-component__header {
     max-width: calc(100% - 8.888rem); } }
 
-@media screen and (min-width: 540px) {
+.bc-row {
+  flex-direction: column; }
+
+.bc-column {
+  margin-bottom: 1.5rem; }
+
+@media screen and (min-width: 768px) {
+  .bc-row {
+    display: flex;
+    flex-direction: column; }
   [class*="-columns"] {
+    flex: 1 1 0;
     margin-left: -0.75rem;
     margin-right: -0.75rem;
-    display: grid;
-    grid-template: auto / 1fr 1fr; }
+    display: grid; }
+    [class*="-columns"]:not(.bc-1-columns) {
+      grid-template: auto/repeat(2, 1fr); }
     [class*="-columns"] .bc-column {
       flex: 1 1 0;
       padding-left: 0.75rem;
@@ -2481,7 +2492,7 @@ figure {
   flex-direction: row;
   flex-wrap: wrap;
   padding-left: calc(0.75rem - 1%);
-  padding-top: 3.66483rem;
+  padding-top: 3.76534rem;
   padding-right: calc(0.75rem - 1%); }
 
 .feature-page-navigation.feature-page-navigation--site-quicklinks .feature-page-navigation__item {
@@ -2949,7 +2960,7 @@ figure {
         align-items: center;
         padding: 0.3rem 0.5rem;
         padding-left: 5.2rem;
-        padding-top: calc((0.8706rem * 1.45) + 0.125rem);
+        padding-top: calc((0.8706rem * 1.5) + 0.125rem);
         overflow: hidden; }
         .bc-expandible-block__expander__button__text .inactive-text, .bc-expandible-block__expander__button__text .active-text {
           width: 100%;
@@ -3321,6 +3332,20 @@ figure {
   border-bottom: 1px solid #651A7B; }
   .bc-accordion__block-body:nth-of-type(4n):after {
     background-color: #651A7B; }
+
+@media screen and (min-width: 768px) {
+  .bc-4x4-layout .bc-column, .bc-4x4-layout hr {
+    margin-bottom: 3rem; }
+  .bc-4x4-layout__intro-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    .bc-4x4-layout__intro-column p, .bc-4x4-layout__intro-column .bc-intro-paragraph {
+      margin-bottom: 0; }
+  .bc-4x4-layout .bc-intro-paragraph {
+    font-weight: 400; }
+  .bc-4x4-layout p {
+    font-weight: 300; } }
 
 .bc-stepped-process__heading {
   font-size: 1.5157rem;
