--- a/node-development/app/sass/style.sass
+++ b/node-development/app/sass/style.sass
@@ -14,8 +14,6 @@
 @import 'framework/project-globals/mixins-project' 
 @import 'framework/typography' 
 @import 'framework/utilities'
-
-
 @import 'framework/navigation-schemes'   
 @import 'framework/grid'  
 @import 'framework/hero' 
@@ -40,6 +38,8 @@ img
 	max-width: 100% 
 figure
 	margin: 0
+iframe
+	border: none
 /* Project custom utilities */
 .bc-svg-icon
 	fill: $brand-darker
@@ -1067,9 +1067,7 @@ $waves-height: 50px
 			font-weight: 400	
 		p 
 			font-weight: 300	
-		
-		
-			
+
 .bc-stepped-process
 	&__heading
 		font-size: $h2
