--- a/node-development/app/sass/framework/_navigation-schemes.sass
+++ b/node-development/app/sass/framework/_navigation-schemes.sass
@@ -184,6 +184,10 @@
 		padding-right: $gutter * 0.5
 		.bc-svg-icon
 			stroke-width: #{(6/14)}rem
+			
+		.bc-menu-icon		
+			&.is-active
+				stroke-color: $brand-primary
 		.feature-page-navigation__navs
 			display: flex 
 			flex-wrap: wrap
