Nav icon animation fixed

--- a/node-development/app/sass/framework/_site-header.sass
+++ b/node-development/app/sass/framework/_site-header.sass
@@ -80,7 +80,7 @@ $desktop-break: $x-large
 	opacity: 0
 	z-index: -20
 	min-height: 100vh
-	transition: opacity 280ms ease-out 120ms
+	transition: opacity 280ms ease-out
 	display: none 
 	flex-direction: 	column
 	justify-content: 	flex-start
