--- a/style.css
+++ b/style.css
@@ -1727,7 +1727,7 @@ figcaption {
   opacity: 0;
   z-index: -20;
   min-height: 100vh;
-  transition: opacity 280ms ease-out 120ms;
+  transition: opacity 280ms ease-out;
   display: none;
   flex-direction: column;
   justify-content: flex-start;
