--- a/node-development/app/sass/framework/_navigation-schemes.sass
+++ b/node-development/app/sass/framework/_navigation-schemes.sass
@@ -52,6 +52,8 @@
 			display: flex
 			align-items: center
 			margin-right: $gutter/6
+			font-size: $small-text
+			font-weight: 300
 			> a 
 				font-size: $small-text
 				font-weight: 300
