--- a/node-development/app/sass/framework/components/_bc-feature-component.sass
+++ b/node-development/app/sass/framework/components/_bc-feature-component.sass
@@ -42,7 +42,7 @@
 		&__content, &__header, &__cta
 			max-width: $content-max-width 
 		
-@import 'bc-4-col-feature' 
+@import 'bc-multi-col-features' 
 @import 'bc-2-col-media-feature'
 @import 'bc-one-col-feature'
 @import 'bc-2-col-cards-feature'
