--- a/node-development/app/sass/framework/_grid.sass
+++ b/node-development/app/sass/framework/_grid.sass
@@ -45,14 +45,18 @@
 		margin-left: 	-$gutter*0.5
 		margin-right: -$gutter*0.5
 		display: grid
-		&:not(.bc-1-columns) 
-			grid-template: auto / repeat(2, 1fr) 
+		grid-template: auto / repeat(2, 1fr) 
 		.bc-column
 			flex: 1 1 0
 			padding-left:  $gutter*0.5
 			padding-right: $gutter*0.5
+	.bc-1-columns
+		grid-template: auto / repeat(1, 1fr) 
 @media screen and (min-width: $large)
+	.bc-3-columns
+		grid-template: auto / repeat(3, 1fr) 
 	.bc-4-columns
 		grid-template: auto / repeat(4, 1fr) 
+	
 		
 			
